--- a/.emacs.d/l_init.org
+++ b/.emacs.d/l_init.org
@@ -738,10 +738,11 @@ near future
 #+BEGIN_SRC emacs-lisp
   (use-package nov
     :mode ("\\.epub\\'" . nov-mode)
-    :custom (nov-text-width 75))
+    :config (nov-text-width 75))
 
   (use-package pdf-tools
     :magic ("%PDF" . pdf-view-mode)
+    :mode ("\\.pdf\\'" . pdf-view-mode)
     :config (pdf-tools-install :no-query))
 
   ;; TODO this needs fixing idk why even
@@ -888,24 +889,33 @@ doing here so I've disabled it for now.
 #+end_src
 
 
-* Corfu for completion-at-point (non-minibuffer kind)
+* Company for completions
+
+Transient: only until I can figure corfu out
+
+#+BEGIN_SRC emacs-lisp
+  (use-package company
+        ;; :ensure t
+    ;; :bind
+    ;;`company-mode-map
+    ;; (("TAB" . company-select-next
+    ;; ("M-n"     . company-select-next)
+        ;;       ("M-p"     . company-select-previous)
+    ;;  ))
+    :config
+    (setq company-idle-delay 0.0)
+    :hook
+    (after-init-hook . global-company-mode))
+#+END_SRC
+
+* TODO Corfu for completion-at-point (non-minibuffer kind)
 
 This might need some more work - integration with [[https://github.com/minad/cape][minad's ~cape~]] for
 various kinds of completions although he alleges this works well with
 base Emacs.
 
-#+BEGIN_SRC emacs-lisp :tangle no
-  (use-package company
-        ;; :ensure t
-        ;;:bind (("M-n"     . company-select-next)
-        ;;       ("M-p"     . company-select-previous))
-    )
-  (setq company-idle-delay 0.0)
-  (add-hook 'after-init-hook #'global-company-mode)
-#+END_SRC
-
 #+NAME: corfu-competions
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
   (use-package corfu
     :bind
     ;; Use TAB for cycling, default is `corfu-complete'.
@@ -925,11 +935,13 @@ base Emacs.
     (corfu-global-mode +1))
 #+END_SRC
 
+** CAPE - extensions for corfu
+
 Corfu needs ~cape~ to provide completion backends because it's extremely
 stripped down. Will have to check what other backends I'll need to
 enable.
 
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
   (use-package cape
       :config
       (setq cape-dabbrev-min-length 2)
@@ -1293,124 +1305,150 @@ behaviour in Emacs.
     (advice-add #'tmm-add-prompt :after #'minibuffer-hide-completions))
 #+END_SRC
 
+
 *** TODO Vertico extensions
 
 Again stolen from Karthik Chikmaglur and needs heavy work, hence not enabled
 
+#+name: vertico-multiform
 #+begin_src emacs-lisp :tangle no
-(use-package vertico-multiform
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  :commands vertico-multiform-mode
-  :after vertico-flat
-  :bind (:map vertico-map
-              ("M-q" . vertico-multiform-grid)
-              ("C-l" . vertico-multiform-unobtrusive)
-              ("C-M-l" . embark-export))
-  :init (vertico-multiform-mode 1)
-  :config
-  (setq vertico-multiform-categories
-         '((file my/vertico-grid-mode reverse)
-           (project-file my/vertico-grid-mode reverse)
-           (imenu buffer)
-           (consult-location buffer)
-           (consult-grep buffer)
-           (notmuch-result reverse)
-           (minor-mode reverse)
-           (reftex-label reverse)
-           (bib-reference reverse)
-           (xref-location reverse)
-           (t unobtrusive)))
-   (setq vertico-multiform-commands
-         '((load-theme my/vertico-grid-mode reverse)
-           (my/toggle-theme my/vertico-grid-mode reverse)
-           (consult-dir-maybe reverse)
-           (consult-dir reverse)
-           (consult-history reverse)
-           (consult-completion-in-region reverse)
-           (completion-at-point reverse)
-           (org-roam-node-find reverse)
-           (embark-completing-read-prompter reverse)
-           (embark-act-with-completing-read reverse)
-           (embark-prefix-help-command reverse)
-           (tmm-menubar reverse)))
+  (use-package vertico-multiform
+    :load-path "~/.emacs.d/lisp/vertico-extensions/"
+    :commands vertico-multiform-mode
+    :after vertico-flat
+    :bind (:map vertico-map
+                ("M-q" . vertico-multiform-grid)
+                ("C-l" . vertico-multiform-unobtrusive)
+                ("C-M-l" . embark-export))
+    :init (vertico-multiform-mode 1)
+    :config
+    (setq vertico-multiform-categories
+           '((file my/vertico-grid-mode reverse)
+             (project-file my/vertico-grid-mode reverse)
+             (imenu buffer)
+             (consult-location buffer)
+             (consult-grep buffer)
+             (notmuch-result reverse)
+             (minor-mode reverse)
+             (reftex-label reverse)
+             (bib-reference reverse)
+             (xref-location reverse)
+             (t unobtrusive)))
+     (setq vertico-multiform-commands
+           '((load-theme my/vertico-grid-mode reverse)
+             (my/toggle-theme my/vertico-grid-mode reverse)
+             (consult-dir-maybe reverse)
+             (consult-dir reverse)
+             (consult-history reverse)
+             (consult-completion-in-region reverse)
+             (completion-at-point reverse)
+             (org-roam-node-find reverse)
+             (embark-completing-read-prompter reverse)
+             (embark-act-with-completing-read reverse)
+             (embark-prefix-help-command reverse)
+             (tmm-menubar reverse)))
 
-   (defun vertico-multiform-unobtrusive ()
-     "Toggle the quiet display."
-     (interactive)
-     (vertico-multiform--display-toggle 'vertico-unobtrusive-mode)
-     (if vertico-unobtrusive-mode
-         (vertico-multiform--temporary-mode 'vertico-reverse-mode -1)
-       (vertico-multiform--temporary-mode 'vertico-reverse-mode 1))))
+     (defun vertico-multiform-unobtrusive ()
+       "Toggle the quiet display."
+       (interactive)
+       (vertico-multiform--display-toggle 'vertico-unobtrusive-mode)
+       (if vertico-unobtrusive-mode
+           (vertico-multiform--temporary-mode 'vertico-reverse-mode -1)
+         (vertico-multiform--temporary-mode 'vertico-reverse-mode 1))))
+#+END_SRC
 
-(use-package vertico-unobtrusive
-  :load-path "~/.local/share/git/vertico/extensions/"
-  :after vertico-flat)
+#+NAME: vertico-unobtrusive
+#+BEGIN_SRC emacs-lisp :tangle no
+  (use-package vertico-unobtrusive
+    :load-path "~/.local/share/git/vertico/extensions/"
+    :after vertico-flat)
+#+end_src
 
-(use-package vertico-grid
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  :after vertico
-  ;; :bind (:map vertico-map ("M-q" . vertico-grid-mode))
-  :config
-  (defvar my/vertico-count-orig vertico-count)
-  (define-minor-mode my/vertico-grid-mode
-    "Vertico-grid display with modified row count."
-    :global t :group 'vertico
-    (cond
-     (my/vertico-grid-mode
-      (setq my/vertico-count-orig vertico-count)
-      (setq vertico-count 4)
-      (vertico-grid-mode 1))
-     (t (vertico-grid-mode 0)
-        (setq vertico-count my/vertico-count-orig))))
-  (setq vertico-grid-separator "    ")
-  (setq vertico-grid-lookahead 50))
+#+name vertico-grid
+#+begin_src emacs-lisp :tangle no
+    (use-package vertico-grid
+      :load-path "~/.emacs.d/lisp/vertico-extensions/"
+      :after vertico
+      ;; :bind (:map vertico-map ("M-q" . vertico-grid-mode))
+      :config
+      (defvar my/vertico-count-orig vertico-count)
+      (define-minor-mode my/vertico-grid-mode
+        "Vertico-grid display with modified row count."
+        :global t :group 'vertico
+        (cond
+         (my/vertico-grid-mode
+          (setq my/vertico-count-orig vertico-count)
+          (setq vertico-count 4)
+          (vertico-grid-mode 1))
+         (t (vertico-grid-mode 0)
+            (setq vertico-count my/vertico-count-orig))))
+      (setq vertico-grid-separator "    ")
+      (setq vertico-grid-lookahead 50))
+  #+end_src
 
+#+name: vertico-quick
+#+begin_src emacs-lisp :tangle no
 (use-package vertico-quick
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  :after vertico
-  :bind (:map vertico-map
-         ("M-i" . vertico-quick-insert)
-         ("C-'" . vertico-quick-exit)
-         ("C-o" . vertico-quick-embark))
-  :config
-  (defun vertico-quick-embark (&optional arg)
-    "Embark on candidate using quick keys."
-    (interactive)
-    (when (vertico-quick-jump)
-      (embark-act arg))))
+      :load-path "~/.emacs.d/lisp/vertico-extensions/"
+      :after vertico
+      :bind (:map vertico-map
+             ("M-i" . vertico-quick-insert)
+             ("C-'" . vertico-quick-exit)
+             ("C-o" . vertico-quick-embark))
+      :config
+      (defun vertico-quick-embark (&optional arg)
+        "Embark on candidate using quick keys."
+        (interactive)
+        (when (vertico-quick-jump)
+          (embark-act arg))))
+#+end_src
 
-(use-package vertico-directory
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  :hook (rfn-eshadow-update-overlay vertico-directory-tidy)
-  :after vertico
-  :bind (:map vertico-map
-         ("DEL"   . vertico-directory-delete-char)
-         ("M-DEL" . vertico-directory-delete-word)
-         ("C-w"   . vertico-directory-delete-word)
-         ("RET"   . vertico-directory-enter)))
+#+name: vertico-directory
+#+begin_src emacs-lisp :tangle no
+    (use-package vertico-directory
+      :load-path "~/.emacs.d/lisp/vertico-extensions/"
+      :hook (rfn-eshadow-update-overlay vertico-directory-tidy)
+      :after vertico
+      :bind (:map vertico-map
+             ("DEL"   . vertico-directory-delete-char)
+             ("M-DEL" . vertico-directory-delete-word)
+             ("C-w"   . vertico-directory-delete-word)
+             ("RET"   . vertico-directory-enter)))
+#+end_src
 
-(use-package vertico-repeat
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  :after vertico
-  :bind (("C-x ." . vertico-repeat))
+#+name:vertico-repeat
+#+begin_src emacs-lisp :tangle no
+    (use-package vertico-repeat
+      :load-path "~/.emacs.d/lisp/vertico-extensions/"
+      :after vertico
+      :bind (("C-x ." . vertico-repeat))
+#+end_src
 
-(use-package vertico-reverse
-  ;; :disabled
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  :after vertico)
+#+name:vertico-reverse
+#+begin_src emacs-lisp :tangle no
+    (use-package vertico-reverse
+      ;; :disabled
+      :load-path "~/.emacs.d/lisp/vertico-extensions/"
+      :after vertico)
+#+end_src
 
-(use-package vertico-flat
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  ;; :bind (:map vertico-map
-  ;;             ("M-q" . vertico-flat-mode))
-  :after vertico)
+#+name:vertico-repeat
+#+begin_src emacs-lisp :tangle no
+    (use-package vertico-flat
+      :load-path "~/.emacs.d/lisp/vertico-extensions/"
+      ;; :bind (:map vertico-map
+      ;;             ("M-q" . vertico-flat-mode))
+      :after vertico)
+#+end_src
 
+#+name:vertico-buffer
+#+begin_src emacs-lisp :tangle no
 (use-package vertico-buffer
-  :load-path "~/.emacs.d/lisp/vertico-extensions/"
-  :after vertico
-  ;; :hook (vertico-buffer-mode . vertico-buffer-setup)
-  :config
-  (setq vertico-buffer-display-action 'display-buffer-reuse-window))
+      :load-path "~/.emacs.d/lisp/vertico-extensions/"
+      :after vertico
+      ;; :hook (vertico-buffer-mode . vertico-buffer-setup)
+      :config
+      (setq vertico-buffer-display-action 'display-buffer-reuse-window))
 #+end_src
 
 
@@ -2243,17 +2281,23 @@ No fringe but nice glyphs for truncated and wrapped lines
 #+END_SRC
 
 
-** Minimalist and ordered modeline
+** Minimalist and ordered mode-line
 
 People seem to use packages for this. I've considered using the
 [[https://github.com/seagle0128/doom-modeline][doom-modeline]] but it seems to be pretty heavy in terms of dependencies
-and I'd like a modeline with a much more fundamental interface
+and I'd like a mode-line with a much more fundamental interface
 although it's still a good contender considering it's very simple to
-configure. I'm also considering [[https://github.com/gexplorer/simple-modeline][simple-modeline]]. For now I'll stick to
-using a set of functions shared by [[https://www.reddit.com/r/emacs/comments/mmqjjw/how_rightalign_items_in_modeline/gttjpc4/][u/pkkm]] /on right aligning items on
-modeline/. I still need to figure out how to use this properly.
+configure. I'm also considering [[https://github.com/gexplorer/simple-modeline][simple-mode-line]].
 
-#+begin_src emacs-lisp :tangle no
+
+*** TODO Mode-line
+
+For now I'll stick to using a set of functions shared by [[https://www.reddit.com/r/emacs/comments/mmqjjw/how_rightalign_items_in_modeline/gttjpc4/][u/pkkm]] /on
+right aligning items on modeline/. I still need to figure out how to
+use this properly and perhaps replace the next section.
+
+#+name: complex-modeline-setup
+#+begin_src emacs-lisp :tangle no :fold t
         ;;; Alignment.
       ;; Fill functions are from <https://github.com/milkypostman/powerline>.
 
@@ -2310,36 +2354,67 @@ modeline/. I still need to figure out how to use this properly.
 
 #+end_src
 
-Or to keep things legible and simple, [[https://emacs.stackexchange.com/a/37270/23936][ideasman42's solution]]:
 
-#+begin_src emacs-lisp
-  (defun simple-mode-line-render (left right)
-    "Return a string of `window-width' length.
-  Containing LEFT, and RIGHT aligned respectively."
-    (let ((available-width
-           (- (window-total-width)
-              (+ (length (format-mode-line left))
-                 (length (format-mode-line right))))))
-      (append left
-              (list (format (format "%%%ds" available-width) ""))
-              right)))
+*** IN-PROGRESS simplistic left-right alignment
 
-  (setq-default mode-line-format
-                '((:eval
-                   (simple-mode-line-render
-                    ;; Left.
-                    (quote (" %5l:%2c "
-                            "%e %1* "
-                            mode-line-buffer-identification
-                            " %3p"))
-                    ;; Right.
-                    (quote (mode-line-frame-identification
-                            mode-line-modes
-                            mode-line-misc-info))))))
+Or to keep things legible and simple, [[https://emacs.stackexchange.com/a/37270/23936][ideasman42's solution]], except it
+doesn't work well. Will revisit later
+
+#+name: does-not-work-mode-line
+#+begin_src emacs-lisp :tangle no
+    (defun simple-mode-line-render (left right)
+      "Return a string of `window-width' length.
+    Containing LEFT, and RIGHT aligned respectively."
+      (let ((available-width
+             (- (window-total-width)
+                (+ (length (format-mode-line left))
+                   (length (format-mode-line right))))))
+        (append left
+                (list (format (format "%%%ds" available-width) ""))
+                right)))
+
+    (setq-default mode-line-format
+                  '((:eval
+                     (simple-mode-line-render
+                      ;; Left.
+                      (quote (" %5l:%2c "
+                              "%e %1* "
+                              mode-line-buffer-identification
+                              " %3p"))
+                      ;; Right.
+                      (quote (mode-line-frame-identification
+                              mode-line-modes
+                              mode-line-misc-info))))))
 #+end_src
 
 
-*** TODO battery on modeline
+*** ~simple-mode-line~ because it's apparently simple
+
+Was hoping I'd get a very minimalist mode-line like Karthik (who's
+somehow becoming something of an obsession now).
+
+#+name: sml-config
+#+begin_src emacs-lisp
+  (use-package smart-mode-line
+    :commands sml/setup
+    :init
+    (setq sml/theme nil)
+    (sml/setup)
+    (unless (version< emacs-version "28.0")
+      (setq mode-line-misc-info
+            '((which-function-mode
+               (which-func-mode
+                ("" which-func-format " ")))
+              ;; (global-mode-string
+              ;;  ("" global-mode-string))
+              )))
+    :config
+    (setq sml/mode-width 'full)
+    )
+#+end_src
+
+
+*** TODO battery on mode-line
 
 #+BEGIN_SRC emacs-lisp
   ;; (use-package battery
